# wrend

./: .gitignore  235.main.js  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  README.md  index.html  main.js  main.wasm
demos/raw_html/: Cargo.toml  package-lock.json  style.scss
demos/raw_html/src/: lib.rs
demos/raw_html/static/: index.html
demos/simplex_noise/: Cargo.toml  index.js  package-lock.json  style.scss
demos/simplex_noise/src/: lib.rs
demos/simplex_noise/src/components/: app.rs
demos/simplex_noise/src/graphics/: create_buffer.rs  create_framebuffer.rs  create_texture.rs  framebuffer_id.rs  program_id.rs  render.rs  texture_id.rs  uniform_id.rs
demos/simplex_noise/src/shaders/: pass_through.glsl  simplex_noise.glsl
demos/simplex_noise/static/: index.html
webgl/: Cargo.toml  README.md
webgl/src/: constants.rs  lib.rs  renderer.rs  utils.rs
webgl/src/renderer/: animation_callback.rs  animation_data.rs  animation_handle.rs  buffer.rs  buffer_context.rs  buffer_create_context.rs  buffer_link.rs  create_buffer_context.rs  framebuffer.rs  framebuffer_create_context.rs  framebuffer_link.rs  id.rs  id_name.rs  program_id_bridge.rs  program_link.rs  program_uniform_link.rs  render_callback.rs  renderer.rs  shader_type.rs  texture.rs  texture_create_context.rs  texture_link.rs  uniform.rs  uniform_callback.rs  uniform_context.rs  uniform_link.rs  uniform_should_update_callback.rs
webgl/src/utils/: compile_shader.rs  create_frame_buffer.rs  create_texture.rs  link_program.rs  setup_program.rs  setup_vertex_buffer.rs
wrend/: .gitignore  Cargo.toml  LICENSE_MIT  README.md  TODO.md  package-lock.json  package.json
wrend/src/: animation.rs  attributes.rs  buffers.rs  callbacks.rs  constants.rs  framebuffers.rs  ids.rs  js_exports.rs  lib.rs  math.rs  programs.rs  recording.rs  renderer.rs  renderer_data.rs  renderers.rs  shaders.rs  textures.rs  transform_feedback.rs  types.rs  uniforms.rs  utils.rs
wrend/src/animation/: animation_callback.rs  animation_callback_js.rs  animation_data.rs  animation_handle.rs
wrend/src/attributes/: attribute.rs  attribute_context.rs  attribute_create_callback.rs  attribute_create_callback_js.rs  attribute_create_context.rs  attribute_create_context_js.rs  attribute_js.rs  attribute_link.rs  attribute_link_js.rs  attribute_location.rs  attribute_should_update_callback.rs  attribute_update_callback.rs  js_attribute.rs  js_attribute_link.rs  vao_id_array_js.rs
wrend/src/buffers/: buffer.rs  buffer_create_callback.rs  buffer_create_callback_js.rs  buffer_create_context.rs  buffer_create_context_js.rs  buffer_js.rs  buffer_link.rs  buffer_link_js.rs  js_buffer.rs  js_buffer_link.rs
wrend/src/callbacks/: callback.rs  callback_with_context.rs  js_callback_with_context.rs
wrend/src/constants/: quad.rs
wrend/src/framebuffers/: framebuffer.rs  framebuffer_create_callback.rs  framebuffer_create_callback_js.rs  framebuffer_create_context.rs  framebuffer_create_context_js.rs  framebuffer_js.rs  framebuffer_link.rs  framebuffer_link_js.rs  js_framebuffer.rs
wrend/src/ids/: id.rs  id_bridge.rs  id_default.rs  id_name.rs
wrend/src/js_exports/: js_attribute.rs  js_framebuffer.rs  js_program_link_builder.rs  js_renderer.rs  js_texture.rs  js_uniform.rs
wrend/src/math/: color.rs  m4.rs  point.rs  utils.rs  vec3.rs
wrend/src/programs/: js_program_link.rs  js_program_link_builder.rs  program_create_callback.rs  program_create_context.rs  program_id_bridge.rs  program_link.rs  program_link_builder_js.rs  program_link_js.rs
wrend/src/recording/: captureStream.js  recording_data.rs  recording_handle.rs  recording_handlers.rs  recording_url.rs
wrend/src/renderer/: animation_callback.rs  animation_data.rs  animation_handle.rs  attribute.rs  attribute_context.rs  attribute_create_context.rs  attribute_link.rs  attribute_location.rs  buffer.rs  buffer_context.rs  buffer_create_context.rs  buffer_link.rs  default_id.rs  errors.rs  framebuffer.rs  framebuffer_create_context.rs  framebuffer_link.rs  get_context_callback.rs  get_context_callback_js.rs  js_renderer.rs  js_renderer_builder.rs  js_renderer_handle.rs  program_create_callback.rs  program_create_context.rs  program_id_bridge.rs  program_link.rs  render_callback.rs  render_callback_js.rs  renderer.rs  renderer_builder_js.rs  renderer_handle.rs  renderer_handle_js.rs  renderer_js.rs  texture.rs  texture_link.rs  uniform_link.rs  uniform_should_update_callback.rs
wrend/src/renderer/errors/: compile_shader_error.rs  create_attribute_error.rs  create_buffer_error.rs  create_framebuffer_error.rs  create_texture_error.rs  create_transform_feedback_error.rs  create_uniform_error.rs  create_vao_error.rs  link_program_error.rs  renderer_builder_error.rs  save_context_error.rs  webgl_context_error.rs
wrend/src/renderer_data/: renderer_data.rs  renderer_data_builder_js.rs  renderer_data_js.rs
wrend/src/renderers/: get_context_callback.rs  render_callback.rs  render_callback_js.rs  renderer.rs  renderer_js.rs
wrend/src/renderers/errors/: build_renderer_error.rs  compile_shader_error.rs  create_attribute_error.rs  (+3 more)
wrend/src/shaders/: shader_type.rs
wrend/src/textures/: js_texture.rs  texture.rs  texture_create_callback.rs  texture_create_callback_js.rs  texture_create_context.rs  texture_create_context_js.rs  texture_js.rs  texture_link.rs  texture_link_js.rs
wrend/src/transform_feedback/: transform_feedback_link.rs  transform_feedback_link_js.rs
wrend/src/types/: attribute_map.rs  buffer_map.rs  string_array.rs  texture_js_array.rs  texture_map.rs  uniform_locations_map.rs  uniform_map.rs  webgl_program_map.rs  webgl_shader_map.rs
wrend/src/uniforms/: js_uniform.rs  uniform.rs  uniform_callback.rs  uniform_context.rs  uniform_context_js.rs  uniform_create_update_callback.rs  uniform_create_update_callback_js.rs  uniform_js.rs  uniform_link.rs  uniform_link_js.rs  uniform_should_update_callback.rs  uniform_should_update_callback_js.rs
wrend/src/utils/: bridge.rs  either.rs  init.rs  into_js_wrapper.rs  js_conversion.rs  js_error.rs  listener.rs
wrend/tests/: web.rs
(+457 files in other folders)
