[workspace]

members = [
    "wrend",
    "demos/shared",
    "demos/entry",
    "demos/hello_quad",
    "demos/hello_quad_animated",
    "demos/game_of_life",
    "demos/larger_than_life",
    "demos/perlin_noise",
    "demos/simplex_noise",
    "demos/recording_demo",
    "demos/video_filters",
    "demos/kaleidoscope",
    "examples/rust_html"
]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true
# less code to include into binary
# panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
