[package]
name = "webgl"
version = "0.1.0"
edition = "2021"
authors = ["Austin Theriot"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.4" }
# This dependency is not directly used, but enabling "js"
# Tells `getrandom` that `rand` should with wasm/js features enabled
getrandom = { version = "0.2.6", features = ["js"] }

# NOTE: only for use on web: These two crates enable the info!() logging macro, etc.
log = "0.4"
wasm-logger = "0.2.0"
