[package]
name = "webgl"
version = "0.1.0"
edition = "2021"
authors = ["Austin Theriot"]
license = "MIT OR Apache-2.0"
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.4" }
# This dependency is not directly used, but enabling "js"
# Tells `getrandom` that `rand` should with wasm/js features enabled
getrandom = { version = "0.2.6", features = ["js"] }

# NOTE: These two crates enable the info!() logging macro, etc.
log = "0.4"
wasm-logger = "0.2.0"

wasm-bindgen = "0.2.78"
js-sys = "0.3.55"
wasm-bindgen-futures = "0.4.29"
futures = "0.3.19"
thiserror = "1.0.31"
uuid = { version = "1.1.2", features = ["v4"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Window',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlFramebuffer',
  'WebGlTexture',
  'Performance',
]
