[package]
name = "wrend"
version = "0.1.0"
edition = "2021"
authors = ["Austin Theriot"]
license = "MIT OR Apache-2.0"
description = "Rust wrapper around WebGL2 in the browser for faster, easier development"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# NOTE: These two crates enable the info!() logging macro, etc.
log = "0.4"
wasm-logger = "0.2.0"
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
js-sys = "0.3.55"
thiserror = "1.0.31"
uuid = { version = "1.1.2", features = ["v4"] }
wasm-bindgen-futures = "0.4.32"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Window',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlFramebuffer',
  'WebGlTexture',
  "WebGlVertexArrayObject",
  "WebGlTransformFeedback",
  "WebGlContextAttributes",
  'Performance',
  "MediaStream",
  "CanvasCaptureMediaStream",
  "MediaRecorder",
  "MediaRecorderOptions",
  "BlobEvent",
  "BlobPropertyBag",
  "EventTarget",
  "MediaRecorderErrorEvent"
]
