[package]
name = "wrend"
version = "0.2.2"
authors = ["Austin Theriot <austinmtheriot@gmail.com>"]
edition = "2021"
description = "A WebGL2 rendering library for Rust/Wasm & JS"
license = "MIT/Apache-2.0"
repository = "https://github.com/austintheriot/wrend"
homepage = "https://github.com/austintheriot/wrend"
documentation = "https://docs.rs/wrend/"
readme = "../README.md"
keywords = ["webgl2", "rendering", "graphics", "raytracer", "webassembly"]
categories = ["wasm", "web-programming", "rendering", "multimedia"]
exclude = ["TODO.md"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# NOTE: These two crates enable the info!() logging macro, etc.
log = "0.4"
wasm-logger = "0.2.0"
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
js-sys = "0.3.55"
thiserror = "1.0.31"
uuid = { version = "1.1.2", features = ["v4", "js"] }
wasm-bindgen-futures = "0.4.32"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
console_error_panic_hook = "0.1.5"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Window',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'HtmlAnchorElement',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlFramebuffer',
  'WebGlTexture',
  'Url',
  "WebGlVertexArrayObject",
  "WebGlTransformFeedback",
  "WebGlContextAttributes",
  'Performance',
  "MediaStream",
  "CanvasCaptureMediaStream",
  "MediaRecorder",
  "MediaRecorderOptions",
  'Blob',
  "BlobEvent",
  "BlobPropertyBag",
  "EventTarget",
  "MediaRecorderErrorEvent",
]
