[package]
name = "raw_html"
description = ""
version = "0.1.0"
edition = "2021"
authors = ["Austin Theriot"]
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.82"
js-sys = "0.3.55"
wrend = { path = '../../wrend' }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.4"
features = [
  "Window",
  'Document',
  "Element",
  "HtmlCanvasElement",
  "WebGl2RenderingContext",
]